Move runProd Gradle task to Grails 3 build.gradle